--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+    networks:
+      - web    # Add this
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${PORT:-3001}/"]
       interval: 30s
@@ -17,3 +19,7 @@ services:
 
 volumes:
   partymanager_data:
+
+networks:    # Add this section
+  web:
+    external: true
