--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DOMAIN_URL=your_domain_here
 
 # Порт для запуска сервера (по умолчанию: 3001)
 PORT=3001
+
+# API base URL для веб-приложения (например: /web-app-api или /partymanager/web-app-api)
+API_BASE_URL=/web-app-api
