--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
-# Telegram Bot Token (получить у @BotFather)
-TELEGRAM_TOKEN=your_token_here
+TELEGRAM_TOKEN=123
+DOMAIN_URL=localhost
 
-# URL вашего домена (например: https://your-domain.com)
-DOMAIN_URL=your_domain_here
-
-# Порт для запуска сервера (по умолчанию: 3001)
 PORT=3001
 
-# API base URL для веб-приложения (например: /web-app-api или /partymanager/web-app-api)
-API_BASE_URL=/web-app-api
+API_URL=/web-app-api
+WEBHOOOK_URL=/webhook
+MENU_BUTTON_URL=/partymanager/
