--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ TELEGRAM_TOKEN=123
 DOMAIN_URL=localhost
 
 PORT=3001
-
 API_URL=/web-app-api
-WEBHOOOK_URL=/webhook
+WEBHOOK_URL=/webhook
 MENU_BUTTON_URL=/partymanager/
