--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-# Telegram Bot Token (получить у @BotFather)
-TELEGRAM_TOKEN=your_token_here
+TELEGRAM_TOKEN=123
+DOMAIN_URL=localhost
 
-# URL вашего домена (например: https://your-domain.com)
-DOMAIN_URL=your_domain_here
-
-# Порт для запуска сервера (по умолчанию: 3001)
 PORT=3001
+API_URL=/web-app-api
+WEBHOOK_URL=/webhook
+MENU_BUTTON_URL=/
