--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
       retries: 3
       start_period: 5s
     networks:
-      - partymanager-network
+      - traefik-network
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
       - "traefik.enable=true"
       - "traefik.http.routers.partymanager.rule=Host(`jhartum.work.gd`) && PathPrefix(`/partymanager`)"
-      - "traefik.http.routers.partymanager.entrypoints=websecure"
-      - "traefik.http.routers.partymanager.tls.certresolver=myresolver"
+      - "traefik.http.routers.partymanager.entrypoints=https"
+      - "traefik.http.routers.partymanager.tls.certresolver=letsencrypt"
       - "traefik.http.middlewares.partymanager-stripprefix.stripprefix.prefixes=/partymanager"
       - "traefik.http.routers.partymanager.middlewares=partymanager-stripprefix@docker"
       - "traefik.http.services.partymanager.loadbalancer.server.port=${PORT:-3001}"
@@ -35,8 +35,8 @@ services:
       - "com.docker.compose.service=app"
 
 networks:
-  partymanager-network:
-    driver: bridge
+  traefik-network:
+    external: true
 
 volumes:
   partymanager_data:
